--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Create.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Create.cshtml
@@ -49,8 +49,7 @@
         </div>
     </form>
 
-
-    @*<script>
+    <script>
         $(document).ready(function () {
 
             new Vue({
@@ -65,7 +64,7 @@
                 }
             });
         });
-    </script>*@
+    </script>
 </div>
 
 
