--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm04/Delete.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm04/Delete.cshtml
@@ -1,13 +1,13 @@
 ﻿@using TR5MidTerm.Models.TR5MidTermViewModels
 
-@model 商品檔DisplayViewModel
+@model 租約主檔DisplayViewModel
 
 @{
-    ViewData["Title"] = "刪除商品資料";
+    ViewData["Title"] = "刪除租約資料";
 }
 
 <h1 class="mt-2 text-danger">@ViewData["Title"]</h1>
-<h3 class="text-warning">請確認是否刪除此筆商品資料？</h3>
+<h3 class="text-warning">請確認是否刪除此筆租約資料？</h3>
 
 <div>
     @* 錯誤訊息區塊 *@
@@ -31,20 +31,35 @@
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.分部顯示)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.分部顯示)</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.商品編號)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.商品編號)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.案號)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.案號)</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.商品名稱)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.商品名稱)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.案名)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.案名)</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.商品類別)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.商品類別)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.租賃方式顯示)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.租賃方式顯示)</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.物件編號)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.物件編號)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.租賃用途)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.租賃用途)</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.單價)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.單價)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.租約起始日期)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.租約起始日期)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.租約終止日期)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.租約終止日期)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.租期月數)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.租期月數)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.計租週期月數)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.計租週期月數)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.繳款期限天數)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.繳款期限天數)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.備註)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.備註)</dd>
 
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.修改人)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.修改人)</dd>
@@ -61,8 +76,9 @@
         @Html.HiddenFor(m => m.單位)
         @Html.HiddenFor(m => m.部門)
         @Html.HiddenFor(m => m.分部)
-        @Html.HiddenFor(m => m.商品編號)
-        @Html.HiddenFor(m => m.商品類別編號)
+        @Html.HiddenFor(m => m.案號)
+        @Html.HiddenFor(m => m.租賃方式編號)
+        @Html.HiddenFor(m => m.承租人編號)
 
         <div class="form-group">
             <input type="submit" value="確認刪除" class="btn btn-danger" />
