--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Index.cshtml
@@ -253,7 +253,7 @@
                     this.selectedMasterRow.param = selectParam;
                     @*debugger;*@
                     this.selectedMasterRow.params = selectParam;
-                    debugger;
+                    @*debugger;*@
 
                     //傳送給server時, 轉ISO時間
                     Object.entries(dateTimePropertyName[TableType.MasterTable]).forEach(([propName, dateType]) => {
