系統04 租約明細create

--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Create.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@model TR5MidTerm.Models.TR5MidTermViewModels.水電總表檔CreateViewModel
-@*<div id="app">
+<div id="app">
     <div v-if="true" class="alert alert-success">
         A {{ customVariable.message }}
     </div>
-</div>*@
+</div>
 <div>
     <form asp-action="Create" method="post">
         @Html.AntiForgeryToken()
