--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm04/Edit.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm04/Edit.cshtml
@@ -62,7 +62,7 @@
             <!-- Select 選擇 -->
             <div class="form-group" id="租賃用途-select-div">
                 <label asp-for="租賃用途" class="control-label">租賃用途</label>
-                <select asp-for="租賃用途" class="form-control" asp-items="ViewBag.租賃用途選項"  >
+                <select asp-for="租賃用途" class="form-control" asp-items="ViewBag.租賃用途選項">
                     @*<option disabled selected value="">-- 請選擇 --</option>*@
                 </select>
                 <span asp-validation-for="租賃用途" class="text-danger"></span>
@@ -103,7 +103,7 @@
 
         <div class="col-md-4">
             <label class="form-label">租約終止日期</label>
-        <input type="text" class="form-control form-control-sm" id="租約終止日期" readonly value="@Model.租約終止日期?.ToString("yyyy/MM/dd")" />
+            <input type="text" class="form-control form-control-sm" id="租約終止日期" readonly value="@Model.租約終止日期?.ToString("yyyy/MM/dd")" />
         </div>
 
 
@@ -115,6 +115,10 @@
             </div>
         </div>
 
+        @Html.HiddenFor(m => m.事業)
+        @Html.HiddenFor(m => m.單位)
+        @Html.HiddenFor(m => m.部門)
+        @Html.HiddenFor(m => m.分部)
 
         <div class="col-md-12">
             <!-- 送出 -->
